<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Tiny Twitter</string>
    <string name="login_label">Go Tweet!</string>
    <string name="title_activity_timeline">Home Timeline</string>

    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="screen_name">Screen Name</string>
    <string name="created_at">Created at</string>
    <string name="hint_whats_happening">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="cancel">Cancel</string>
    <string name="_140">140</string>
    <string name="reply">Reply</string>
    <string name="profile">Profile</string>
    <string name="userid">userId</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="error_loading">Tweets aren\'t loading right now</string>
    <string name="error_retry">Please tab to retry</string>
    <string name="at">\@</string>
    <string name="retweets">RETWEETS</string>
    <string name="likes">LIKES</string>
    <string name="_0">0</string>
    <string name="inReplyTo">In reply to</string>

</resources>