<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etNewTweet"
        android:hint="@string/hint_whats_happening"
        android:minLines="5"
        android:gravity="top"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/ivMyProfileImg"
        android:layout_toRightOf="@+id/ivMyProfileImg"
        android:maxLength="140" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_140"
        android:id="@+id/tvCharCount"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignBaseline="@+id/btnTweet"
        android:layout_alignBottom="@+id/btnTweet"
        android:layout_toLeftOf="@+id/btnTweet"
        android:layout_toStartOf="@+id/btnTweet" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/ivMyProfileImg"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_twitter_55acee"
        android:layout_marginRight="@dimen/custom_margin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet"
        android:id="@+id/btnTweet"
        android:layout_below="@+id/etNewTweet"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/layout_rounded_corners"
        android:textColor="#ffffff" />

</RelativeLayout>