<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:paddingLeft="@dimen/custom_padding"
    android:paddingTop="@dimen/custom_padding"
    android:paddingRight="@dimen/custom_padding"
    android:paddingBottom="@dimen/custom_padding">

    <ImageView
        android:id="@+id/ivProfHdPic"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_twitter_55acee" />

    <TextView
        android:id="@+id/tvProfHdName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ivProfHdPic"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/twitter_black" />

    <TextView
        android:id="@+id/tvProfHdScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvProfHdName"
        android:text="@string/screen_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvProfHdDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvProfHdScreenName"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:autoLink="all"
        android:clickable="true"
        android:textColor="@color/twitter_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvProfHdDesc"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvProfHdFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="0.5"
            android:text="@string/following"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/twitter_darkgray" />

        <TextView
            android:id="@+id/tvProfHdFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvUserFollowing"
            android:layout_toRightOf="@+id/tvUserFollowing"
            android:layout_weight="0.5"
            android:text="@string/followers"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/twitter_darkgray" />
    </LinearLayout>
</RelativeLayout>