<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:paddingBottom="@dimen/custom_padding"
    android:paddingLeft="@dimen/custom_padding"
    android:paddingRight="@dimen/custom_padding"
    android:paddingTop="@dimen/custom_padding">

    <ImageView
        android:id="@+id/ivTweetProfileImg"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_twitter_55acee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivTweetProfileImg"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/custom_margin"
        android:layout_toEndOf="@+id/ivTweetProfileImg"
        android:layout_toRightOf="@+id/ivTweetProfileImg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTweetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/ivTweetProfileImg"
            android:layout_toRightOf="@+id/ivTweetProfileImg"
            android:text="@string/name"
            android:textColor="@color/twitter_black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTweetScreenName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ivTweetProfileImg"
            android:layout_toEndOf="@+id/ivTweetProfileImg"
            android:layout_toRightOf="@+id/ivTweetProfileImg"
            android:text="@string/screen_name"
            android:textColor="@color/twitter_darkgray" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTweetText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ivTweetProfileImg"
        android:layout_marginBottom="@dimen/custom_margin"
        android:layout_marginTop="@dimen/custom_margin"
        android:autoLink="all"
        android:linksClickable="true"
        android:text="@string/tweet"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/twitter_black" />

    <TextView
        android:id="@+id/tvTweetCreatedAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvTweetText"
        android:layout_marginBottom="@dimen/custom_margin"
        android:layout_marginTop="@dimen/custom_margin"
        android:text="@string/created_at"
        android:textColor="@color/twitter_darkgray" />

    <RelativeLayout
        android:id="@+id/rlStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvTweetCreatedAt"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/custom_margin"
        android:layout_marginBottom="@dimen/custom_margin">

        <TextView
            android:id="@+id/tvTweetRts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retweets"
            android:textColor="@color/twitter_darkgray" />

        <TextView
            android:id="@+id/tvTweetLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/tvTweetRts"
            android:layout_toRightOf="@+id/tvTweetRts"
            android:text="@string/likes" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llIcons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rlStats"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/custom_margin">

        <ImageView
            android:id="@+id/ivTweetReply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="0.25"
            android:src="@drawable/twitter_reply" />

        <ImageView
            android:id="@+id/tvReTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/ivTweetReply"
            android:layout_toRightOf="@+id/ivTweetReply"
            android:layout_weight="0.25"
            android:src="@drawable/twitter_retweet" />

        <ImageView
            android:id="@+id/ivTweetLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/tvReTweet"
            android:layout_toRightOf="@+id/tvReTweet"
            android:layout_weight="0.25"
            android:src="@drawable/twitter_like" />

        <ImageView
            android:id="@+id/ivTPEtc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/tvReTweet"
            android:layout_toRightOf="@+id/tvReTweet"
            android:layout_weight="0.25"
            android:src="@drawable/ic_keyboard_control_24dp" />
    </LinearLayout>

</RelativeLayout>