<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/custom_padding"
    android:paddingLeft="@dimen/custom_padding"
    android:paddingRight="@dimen/custom_padding"
    android:paddingTop="@dimen/custom_padding">

    <ImageView
        android:id="@+id/ivTPProfileImg"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginBottom="@dimen/custom_margin"
        android:layout_marginRight="@dimen/custom_margin"
        android:src="@drawable/ic_twitter_55acee" />

    <LinearLayout
        android:id="@+id/llTPContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llTPWhoAndWhen">

            <TextView
                android:id="@+id/tvTPName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/twitter_black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTPScreenName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/screen_name"
                android:textColor="@color/twitter_darkgray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvTPCreatedAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/created_at"
                android:textColor="@color/twitter_darkgray"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTPText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:linksClickable="true"
            android:textColor="@color/twitter_black" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ivTPPhoto"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/custom_margin"
            android:layout_marginBottom="@dimen/custom_margin" />

        <RelativeLayout
            android:id="@+id/rlTPIcons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/custom_margin">

            <ImageView
                android:id="@+id/ivTPReply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/twitter_reply"
                android:layout_marginRight="@dimen/custom_margin_icon" />

            <ImageView
                android:id="@+id/ivTPReTweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter_retweet"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/ivTPReply"
                android:layout_toEndOf="@+id/ivTPReply"
                android:layout_marginLeft="@dimen/custom_margin_icon"
                android:layout_marginRight="@dimen/custom_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/_0"
                android:id="@+id/tvTPRTCnt"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/ivTPReTweet"
                android:layout_toEndOf="@+id/ivTPReTweet"
                android:layout_marginRight="@dimen/custom_margin_icon" />

            <ImageView
                android:id="@+id/ivTPLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter_like"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/tvTPRTCnt"
                android:layout_toEndOf="@+id/tvTPRTCnt"
                android:layout_marginLeft="@dimen/custom_margin_icon"
                android:layout_marginRight="@dimen/custom_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/_0"
                android:id="@+id/tvTPLikesCnt"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/ivTPLike"
                android:layout_toEndOf="@+id/ivTPLike" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>