<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/custom_padding"
    android:paddingTop="@dimen/custom_padding"
    android:paddingRight="@dimen/custom_padding"
    android:paddingBottom="@dimen/custom_padding">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/ivTProfileImg"
        android:src="@drawable/ic_twitter_55acee"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginRight="@dimen/custom_margin"
        android:layout_marginBottom="@dimen/custom_margin" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llTContainer">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llTWhoandWhen">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/tvTName"
                    android:textStyle="bold"
                    android:textColor="@color/twitter_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen_name"
                    android:id="@+id/tvTScreenName"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/twitter_darkgray"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/created_at"
                    android:id="@+id/tvTCreatedAt"
                    android:gravity="right"
                    android:textColor="@color/twitter_darkgray"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvTText"
                android:linksClickable="true"
                android:autoLink="all"
                android:textColor="@color/twitter_black" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlTIcons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/custom_margin" >

            <ImageView
                android:id="@+id/ivTReply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/twitter_reply"
                android:layout_marginRight="@dimen/custom_margin_icon" />

            <ImageView
                android:id="@+id/ivTReTweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter_retweet"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/ivTReply"
                android:layout_toEndOf="@+id/ivTReply"
                android:layout_marginLeft="@dimen/custom_margin_icon"
                android:layout_marginRight="@dimen/custom_margin" />

            <ImageView
                android:id="@+id/ivTLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter_like"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/tvTRTCnt"
                android:layout_toEndOf="@+id/tvTRTCnt"
                android:layout_marginLeft="@dimen/custom_margin_icon"
                android:layout_marginRight="@dimen/custom_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/tvTRTCnt"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/ivTReTweet"
                android:layout_toEndOf="@+id/ivTReTweet"
                android:layout_marginRight="@dimen/custom_margin_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/tvTLikesCnt"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/ivTLike"
                android:layout_toEndOf="@+id/ivTLike" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>